--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Historial
+      Historial - TAB 2
     </ion-title>
   </ion-toolbar>
 </ion-header>
