Creando el tab Historial, Modelo de Registros y dataLocalService

--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -8,7 +8,7 @@
                         size="large"
                         shape="round"
                         (click)="scan()">    
-                ScanCode  !!!                  
+                ScanCode                 
             </ion-button>
 
         </ion-slide>
